[gd_scene load_steps=2 format=3 uid="uid://c7fpfy2srf3b6"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_48yo5"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_48yo5")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 38
text = "Project Snow"
fit_content = true
scroll_active = false

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Continue"

[node name="LoadGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Load Game"

[node name="NewGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "New Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Options"

[node name="ExitGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
